@@ -102,7 +102,7 @@ be allowed.
 @tindex FL_PLACE_FULLSCREEN
 @item FL_PLACE_FULLSCREEN
 The form is scaled to cover the full screen. If
-@code{@ref{FL_FREE_SIZE}} is also specified, interative resizing will
+@code{@ref{FL_FREE_SIZE}} is also specified, interactive resizing will
 be allowed.
 
 @anchor{FL_PLACE_FREE}
